--- a/nuget.config
+++ b/nuget.config
@@ -1,3 +1,3 @@
 <settings>
-         <repositoryPath>c:\NugetPackages</repositoryPath>
+         <repositoryPath>.\packages</repositoryPath>
 </settings>
