Add.html => add/Default.aspx

--- a/odict.ru/Web.config
+++ b/odict.ru/Web.config
@@ -18,7 +18,7 @@
                 validation="SHA1"
                 decryption="AES" />
     <urlMappings enabled="true">
-      <add url="~/api" mappedUrl="~/Api.ashx"/>
+      <add url="~/api" mappedUrl="~/add/Api.ashx"/>
     </urlMappings>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
