--- a/DawgBuilder/DawgBuilder.csproj
+++ b/DawgBuilder/DawgBuilder.csproj
@@ -34,9 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DawgSharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\morpher3\DawgSharp\DawgSharp\bin\Release\DawgSharp.dll</HintPath>
+    <Reference Include="DawgSharp">
+      <HintPath>..\packages\DawgSharp.1.0.5\lib\net\DawgSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,7 +44,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Zalizniak">
-      <HintPath>..\..\Accentizer2\ZalizniakImport\bin\Release\Zalizniak.dll</HintPath>
+      <HintPath>..\odict.ru\bin\Zalizniak.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
