--- a/odict.ru/odict.ru.csproj
+++ b/odict.ru/odict.ru.csproj
@@ -106,6 +106,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="add\DawgBuilder.exe" />
     <Content Include="add\Default.aspx" />
     <Content Include="add\Legacy.aspx" />
     <Content Include="add\DictionaryService.asmx" />
