Устранены задержки при старте сайта и нажатии кнопки "Добавить" на странице /add
Путем перемещения индексирования в отдельный поток.

--- a/odict.ru/odict.ru.csproj
+++ b/odict.ru/odict.ru.csproj
@@ -170,6 +170,7 @@
       <DependentUpon>DictionaryService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="FileBasedDictionary.cs" />
     <Compile Include="download\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
