Send admin an email when a new word is added

--- a/odict.ru/odict.ru.csproj
+++ b/odict.ru/odict.ru.csproj
@@ -143,6 +143,7 @@
       <DependentUpon>DictionaryService.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Email.cs" />
     <Compile Include="FileBasedDictionary.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Global.asax.cs">
