Upgrade to DawgSharp 1.0.7
Make sure you have Package Restore enabled:
http://docs.nuget.org/docs/reference/package-restore

--- a/odict.ru/odict.ru.csproj
+++ b/odict.ru/odict.ru.csproj
@@ -43,8 +43,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DawgSharp">
-      <HintPath>..\packages\DawgSharp.1.0.5\lib\net\DawgSharp.dll</HintPath>
+    <Reference Include="DawgSharp, Version=1.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\DawgSharp.1.0.7\lib\net\DawgSharp.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.0\lib\net40\EntityFramework.dll</HintPath>
