Generate http://odict.ru/download/wordforms.zip #27

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ DawgBuilder/bin
 DawgBuilder/obj
 odict.ru/App_Data
 ~$oDict.docx
+odict.ru/download/wordforms.zip
+odict.ru/download/wordforms.txt
