Make website more responsive
Updating indices and downloadable files is quite CPU intensive and it
used to block request processing threads making the website slow.  Now
file updates are scheduled in a smarter way: after a 5 minute user
inactivity or when generated files are 1 hour behind, whichever comes
first.

--- a/odict.ru/odict.ru.csproj
+++ b/odict.ru/odict.ru.csproj
@@ -171,6 +171,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="SchedulerTask.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
